Fixed issues with the photo viewer mode on iOS.

--- a/Solution/PhotoGallery.Web/Content/gallery/Site.css
+++ b/Solution/PhotoGallery.Web/Content/gallery/Site.css
@@ -1,6 +1,13 @@
 
+html {
+	width: 100%;
+	height: 100%;
+}
+
 body {
-	background: #f8f8f8;
+	background-color: #f8f8f8;
+	width: 100%;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 	font-family: "Droid Serif" , "Georgia" , serif;
@@ -59,7 +66,7 @@ ul {
 
 .top-bar {
 	background-color: #333;
-	margin-bottom: 20px;
+	margin-bottom: -50px;
 	height: 50px;
 	position: fixed;
 	z-index: 100;
@@ -167,7 +174,7 @@ ul {
 
 
 #Page {
-	margin-top: 70px;
+	padding-top: 70px;
 }
 
 #Page .separator {
@@ -241,7 +248,7 @@ ul {
 @media only screen and (max-width: 767px) {
 
 	#Page {
-		margin-top: 60px;
+		padding-top: 60px;
 	}
 
 	#Page .rightTextBox {
@@ -269,7 +276,7 @@ ul {
 
 
 #Page.landingPage {
-	margin: 0;
+	padding: 0;
 }
 
 #Page .landingRow {
@@ -372,16 +379,18 @@ ul {
 
 #PhotoViewer {
 	background-color: #000;
-	background-color: rgba(0, 0, 0, 0.9);
 	position: fixed;
-	top: 0;
-	left: 0;
 	width: 100%;
 	height: 100%;
-	padding: 0;
-	margin: 0;
 	display: none;
-	z-index: 999;
+}
+
+#PhotoViewerPadding { /* allows you to scroll on iOS to remove the address bar */
+	position: absolute;
+	height: 100%;
+	width: 10px;
+	top: 0px;
+	margin-top: 69px;
 }
 
 #PhotoViewer .photo {
